- updated man pages

--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -140,6 +140,19 @@
             </dd>
             <dt>
               <span class="term">
+                <code class="option">COMPRESSION=<em class="replaceable"><code>algorithm</code></em></code>
+              </span>
+            </dt>
+            <dd>
+              <p>Defines the compression algorithm used for saving file
+	  list. Allowed values are "none" and
+	  "gzip". Depending on the installed libraries, some
+	  compression algorithms might not be available.</p>
+              <p>Default value is "gzip".</p>
+              <p>New in version 0.10.1.</p>
+            </dd>
+            <dt>
+              <span class="term">
                 <code class="option">NUMBER_CLEANUP=<em class="replaceable"><code>boolean</code></em></code>
               </span>
             </dt>
