--- a/manpages/snapper-zypp-plugin.conf.html
+++ b/manpages/snapper-zypp-plugin.conf.html
@@ -17,8 +17,10 @@
       <div class="refsect1">
         <a id="description"></a>
         <h2>DESCRIPTION</h2>
-        <p>The file <code class="filename">/etc/snapper/zypp-plugin.conf</code> contains
-    the configuation for snapper-zypp-plugin.</p>
+        <p>The file <code class="filename">/etc/snapper/zypp-plugin.conf</code>
+    or as a fallback
+    <code class="filename">/usr/share/snapper/zypp-plugin.conf</code> contains the
+    configuation for snapper-zypp-plugin.</p>
         <p>The file uses XML syntax. For the XML structure have a look at the
     provided default config.</p>
       </div>
