--- a/manpages/snapper-zypp-plugin.html
+++ b/manpages/snapper-zypp-plugin.html
@@ -34,6 +34,14 @@
             <dd>
               <p>Configuration file. New in version 0.1.8.</p>
             </dd>
+            <dt>
+              <span class="term">
+                <code class="filename">/usr/share/snapper/zypp-plugin.conf</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Fallback configuration file. New in version 0.9.1.</p>
+            </dd>
           </dl>
         </div>
       </div>
