- updated man page

--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -92,7 +92,7 @@
           <div class="itemizedlist">
             <ul class="itemizedlist" style="list-style-type: disc; ">
               <li class="listitem">
-                <p>A cron-job creates hourly snapshots.</p>
+                <p>A cronjob or systemd timer creates hourly snapshots, if TIMELINE_CREATE is enabled for a config.</p>
               </li>
               <li class="listitem">
                 <p>Certain programs like YaST and zypper create pre/post
