- updated man page

--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -105,7 +105,7 @@
           <a id="cleanup_algorithms"></a>
           <h3>Cleanup Algorithms</h3>
           <p>Snapper provides several algorithms to clean up old snapshots. The
-      algorithms are executed in a daily cron-job. This can be configured in the
+      algorithms are executed in a daily cronjob or systemd timer. This can be configured in the
       corresponding configurations files along with parameters for every
       algorithm.</p>
           <div class="glosslist">
