- updated man pages

--- a/manpages/snapper-zypp-plugin.html
+++ b/manpages/snapper-zypp-plugin.html
@@ -46,6 +46,31 @@
         </div>
       </div>
       <div class="refsect1">
+        <a id="environment"></a>
+        <h2>ENVIRONMENT</h2>
+        <div class="variablelist">
+          <dl class="variablelist">
+            <dt>
+              <span class="term">
+                <code class="envar">SNAPPER_ZYPP_PLUGIN_DEBUG</code>
+              </span>
+            </dt>
+            <dd>
+              <p>If set, debug output is enabled. The debug output is
+	  usually included in <code class="filename">/var/log/zypper.log</code>.</p>
+            </dd>
+            <dt>
+              <span class="term">
+                <code class="envar">DISABLE_SNAPPER_ZYPP_PLUGIN</code>
+              </span>
+            </dt>
+            <dd>
+              <p>If set, the plugin is disabled.</p>
+            </dd>
+          </dl>
+        </div>
+      </div>
+      <div class="refsect1">
         <a id="homepage"></a>
         <h2>HOMEPAGE</h2>
         <p>
