Fix typo in FAQ

--- a/faq.html
+++ b/faq.html
@@ -155,7 +155,7 @@ layout: default
     <li>
       <h3>Are there GUIs for snapper?</h3>
 
-      <p>Yes, there are independend projects providing GUIs for snapper:</p>
+      <p>Yes, there are independent projects providing GUIs for snapper:</p>
 
       <ul>
 	<li><a href="https://github.com/yast/yast-snapper">yast2-snapper</a></li>
