- update man-pages

--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -596,6 +596,15 @@
                     <p>Create a snapshot from the snapshot with the
 		provided number instead of snapshot 0.</p>
                   </dd>
+                  <dt>
+                    <span class="term">
+                      <code class="option">--empty</code>
+                    </span>
+                  </dt>
+                  <dd>
+                    <p>Create an empty snapshot. Only supported on
+		btrfs and with --no-dbus.</p>
+                  </dd>
                 </dl>
               </div>
             </dd>
@@ -1194,6 +1203,7 @@
         <p>
       <a class="citerefentry" href="snapper-configs.html"><span class="citerefentry"><span class="refentrytitle">snapper-configs</span>(5)</span></a>,
       <a class="citerefentry" href="snapper-zypp-plugin.html"><span class="citerefentry"><span class="refentrytitle">snapper-zypp-plugin</span>(8)</span></a>,
+      <a class="citerefentry" href="snbk.html"><span class="citerefentry"><span class="refentrytitle">snbk</span>(8)</span></a>,
       <a class="citerefentry" href="pam_snapper.html"><span class="citerefentry"><span class="refentrytitle">pam_snapper</span>(8)</span></a>,
       <span class="citerefentry"><span class="refentrytitle">btrfs</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">lvm</span>(8)</span>,
