- add links to new man-pages

--- a/documentation.html
+++ b/documentation.html
@@ -10,11 +10,13 @@ layout: default
   <ul>
     <li><a href="manpages/snapper.html">snapper</a></li>
     <li><a href="manpages/snapperd.html">snapperd</a></li>
+    <li><a href="manpages/snbk.html">snbk</a></li>
     <li><a href="manpages/snapper-configs.html">snapper-configs</a></li>
-    <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
+    <li><a href="manpages/snapper-backup-configs.html">snapper-backup-configs</a></li>
     <li><a href="manpages/snapper-zypp-plugin.html">snapper-zypp-plugin</a></li>
     <li><a href="manpages/snapper-zypp-plugin.conf.html">snapper-zypp-plugin.conf</a></li>
     <li><a href="manpages/mksubvolume.html">mksubvolume</a></li>
+    <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
   </ul>
 
   <h3>External Blogs</h3>
