--- a/manpages/snapper-configs.html
+++ b/manpages/snapper-configs.html
@@ -66,7 +66,7 @@
             </dt>
             <dd>
               <p>Limit of the filesystems space the snapshots should
-	  use. Either a fraction of the whole filesystem for an
+	  use. Either a fraction of the whole filesystem or an
 	  absolute value. An absolute value must use the C locale.</p>
               <p>Only supported for btrfs.</p>
               <p>Default value is "0.5".</p>
@@ -81,7 +81,7 @@
             </dt>
             <dd>
               <p>Limit of the filesystem space that should be
-	  free. Either a fraction of the whole filesystem for an absolute
+	  free. Either a fraction of the whole filesystem or an absolute
 	  value. An absolute value must use the C locale.</p>
               <p>Only supported for btrfs.</p>
               <p>Default value is "0.2".</p>
