- updated man page

--- a/manpages/snapper-backup-configs.html
+++ b/manpages/snapper-backup-configs.html
@@ -113,15 +113,8 @@
               </span>
             </dt>
             <dd>
-              <p>Location of the btrfs binary on the target. Optional.</p>
-            </dd>
-            <dt>
-              <span class="term">
-                <code class="option">target-realpath-bin</code>
-              </span>
-            </dt>
-            <dd>
-              <p>Location of the realpath binary on the target. Optional.</p>
+              <p>Location of the btrfs binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</p>
             </dd>
             <dt>
               <span class="term">
@@ -129,7 +122,44 @@
               </span>
             </dt>
             <dd>
-              <p>Location of the findmnt binary on the target. Optional.</p>
+              <p>Location of the findmnt binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</p>
+            </dd>
+            <dt>
+              <span class="term">
+                <code class="option">target-mkdir-bin</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Location of the mkdir binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</p>
+            </dd>
+            <dt>
+              <span class="term">
+                <code class="option">target-realpath-bin</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Location of the realpath binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</p>
+            </dd>
+            <dt>
+              <span class="term">
+                <code class="option">target-rm-bin</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Location of the rm binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</p>
+            </dd>
+            <dt>
+              <span class="term">
+                <code class="option">target-rmdir-bin</code>
+              </span>
+            </dt>
+            <dd>
+              <p>Location of the rmdir binary on the target. Can also
+	  be used to install wrapper scripts. Optional.</p>
             </dd>
           </dl>
         </div>
